[gd_scene load_steps=19 format=2]

[ext_resource path="res://Juego/Estacion/AreaAtraccion.tscn" type="PackedScene" id=1]
[ext_resource path="res://Juego/Estacion/BaseEnemiga1.png" type="Texture" id=2]
[ext_resource path="res://Juego/Estacion/BaseEnemiga3.png" type="Texture" id=3]
[ext_resource path="res://Juego/Estacion/BaseEnemiga2.png" type="Texture" id=4]
[ext_resource path="res://Juego/Estacion/BaseEnemiga4.png" type="Texture" id=5]
[ext_resource path="res://Juego/Estacion/BaseEnemiga.gd" type="Script" id=6]
[ext_resource path="res://Juego/Enemigos/Area2D.gd" type="Script" id=7]
[ext_resource path="res://Juego/thrusterFire_003.ogg" type="AudioStream" id=8]
[ext_resource path="res://Juego/Estacion/PosicionesSpawn.gd" type="Script" id=9]
[ext_resource path="res://Juego/Estacion/RutaEnemigo.gd" type="Script" id=10]
[ext_resource path="res://Juego/Estacion/EnemigoOrbital.tscn" type="PackedScene" id=11]

[sub_resource type="CapsuleShape2D" id=4]
radius = 54.1152
height = 364.481

[sub_resource type="CapsuleShape2D" id=5]
radius = 16.1071
height = 39.4108

[sub_resource type="CapsuleShape2D" id=6]
radius = 21.4465
height = 71.447

[sub_resource type="Animation" id=1]
resource_name = "default"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "rotacion_anti_horario"
length = 7.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -360.0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "rotacion_horario"
length = 7.0
loop = true
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[sub_resource type="Curve2D" id=7]
_data = {
"points": PoolVector2Array( -13.3484, 34.7058, 13.3484, -34.7058, -485.256, -38.4093, -5.33936, 29.3665, 5.33936, -29.3665, -431.863, -113.16, -16.0181, 32.0362, 16.0181, -32.0362, -431.863, -193.251, -13.3484, 29.3665, 13.3484, -29.3665, -343.763, -262.662, -37.3755, 32.0362, 37.3755, -32.0362, -325.075, -334.744, -16.0181, 64.0723, 16.0181, -64.0723, -263.673, -372.119, -13.3484, -16.0181, 13.3484, 16.0181, -207.609, -422.843, 0, 0, 0, 0, -116.84, -430.852, 0, 0, 0, 0, -31.4106, -473.567, -48.0542, -5.33936, 48.0542, 5.33936, 80.716, -446.87, -45.3846, -18.6878, 45.3846, 18.6878, 171.485, -444.201, -37.3755, -16.0181, 37.3755, 16.0181, 198.182, -412.164, -34.7058, -29.3665, 34.7058, 29.3665, 278.272, -385.468, -29.3665, 0, 29.3665, 0, 339.675, -326.735, -10.6787, -37.3755, 10.6787, 37.3755, 379.72, -289.359, -48.0542, -40.0452, 48.0542, 40.0452, 419.765, -177.233, -10.6787, -29.3665, 10.6787, 29.3665, 443.792, -166.554, -16.0181, -40.0452, 16.0181, 40.0452, 443.792, -99.8119, 0, -32.0362, 0, 32.0362, 470.489, -49.088, -21.3574, -32.0362, 21.3574, 32.0362, 457.141, 36.3417, 37.3755, -42.7149, -37.3755, 42.7149, 470.489, 68.3779, 16.0181, -45.3846, -16.0181, 45.3846, 438.453, 153.808, 8.00904, -37.3755, -8.00904, 37.3755, 433.114, 201.862, 21.3574, -24.0271, -21.3574, 24.0271, 366.372, 260.595, 21.3574, -13.3484, -21.3574, 13.3484, 347.684, 319.328, 13.3484, -24.0271, -13.3484, 24.0271, 296.96, 330.007, 32.0362, -16.0181, -32.0362, 16.0181, 259.585, 386.07, 24.0271, -18.6878, -24.0271, 18.6878, 155.467, 404.758, 32.0362, -8.00904, -32.0362, 8.00904, 171.485, 450.142, 32.0362, -8.00904, -32.0362, 8.00904, 70.0373, 450.142, 53.3936, 5.33936, -53.3936, -5.33936, -28.7409, 471.5, 5.33936, -18.6878, -5.33936, 18.6878, -119.51, 404.758, 37.3755, 13.3484, -37.3755, -13.3484, -196.931, 442.133, 34.7058, 26.6968, -34.7058, -26.6968, -223.628, 372.721, 21.3574, 13.3484, -21.3574, -13.3484, -298.379, 378.061, 18.6878, 18.6878, -18.6878, -18.6878, -341.093, 281.952, 37.3755, 32.0362, -37.3755, -32.0362, -405.166, 244.577, 32.0362, 21.3574, -32.0362, -21.3574, -426.523, 132.45, 29.3665, 29.3665, -29.3665, -29.3665, -453.22, 119.102, 2.66325, 8.23477, -2.66325, -8.23477, -451.939, -2.7399, 0, 0, 0, 0, -470.817, -25.3929, 0, 0, 0, 0, -485.256, -38.4093 )
}

[node name="BaseEnemiga" type="Node2D"]
z_index = 30
z_as_relative = false
script = ExtResource( 6 )
orbital = ExtResource( 11 )
numero_orbitales = 5

[node name="Sprites" type="Node2D" parent="."]
rotation = 6.28319

[node name="Brazo" type="Sprite" parent="Sprites"]
position = Vector2( 149, 1 )
rotation = -3.14159
texture = ExtResource( 2 )

[node name="Body" type="Sprite" parent="Sprites"]
position = Vector2( -4, 97 )
texture = ExtResource( 4 )

[node name="Cabeza" type="Sprite" parent="Sprites"]
position = Vector2( 0, -167 )
texture = ExtResource( 3 )

[node name="Cuello" type="Sprite" parent="Sprites"]
position = Vector2( 0, -120 )
texture = ExtResource( 5 )

[node name="AreaColision" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 13
script = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaColision"]
position = Vector2( 1.33484, 49.389 )
shape = SubResource( 4 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="AreaColision"]
position = Vector2( -98.7781, -2.66971 )
rotation = -1.5708
shape = SubResource( 5 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="AreaColision"]
position = Vector2( 133.484, -3.05176e-05 )
rotation = -1.5708
shape = SubResource( 6 )

[node name="AreaAtraccon" parent="." instance=ExtResource( 1 )]
visible = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/default = SubResource( 1 )
anims/rotacion_anti_horario = SubResource( 3 )
anims/rotacion_horario = SubResource( 2 )

[node name="ImpactosSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="PosicionesSpawn" type="Node2D" parent="."]
script = ExtResource( 9 )

[node name="Norte" type="Position2D" parent="PosicionesSpawn"]
position = Vector2( 0, -450 )

[node name="Sur" type="Position2D" parent="PosicionesSpawn"]
position = Vector2( 0, 450 )

[node name="Oeste" type="Position2D" parent="PosicionesSpawn"]
position = Vector2( -450, 0 )

[node name="Este" type="Position2D" parent="PosicionesSpawn"]
position = Vector2( 450, 0 )

[node name="RutaEnemigo" type="Path2D" parent="."]
self_modulate = Color( 0, 0.2, 1, 0.701961 )
show_behind_parent = true
curve = SubResource( 7 )
script = ExtResource( 10 )

[node name="TimerSpawnerEnemigos" type="Timer" parent="."]

[connection signal="body_entered" from="AreaColision" to="." method="_on_AreaColision_body_entered"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="timeout" from="TimerSpawnerEnemigos" to="." method="_on_TimerSpawnerEnemigos_timeout"]
